# fypApp

./: .gitignore  FONT_SETUP_INSTRUCTIONS.md  README.md  app.json  babel.config.js  deploy-firebase-rules.js  firestore.rules  metro.config.js  package-lock.json  package.json  tailwind.config.js  test_assessment_flow.md  test_backend.py  tsconfig.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
backend/app/: auth.py  config.py  database.py  inference_runner.py  logging_config.py  main.py  middleware.py  rate_limit.py  upload_validation.py
backend/app/routers/: assessment.py
backend/app/schemas/: assessment.py  calibration.py
backend/app/services/: __init__.py  calibration_store.py  eye_tracking.py  groq_llm.py  mcq_assessment.py  report_generator.py  speech_analysis.py
backend/dataset/Eigsti/: 0data.xlsx  0metadata.cdc
backend/dataset/Nadig/: 0metadata.cdc  101.cha  102.cha  103.cha  104.cha  108.cha  109.cha  110.cha  111.cha  115.cha  117.cha  119.cha  120.cha  121.cha  122.cha  123.cha  124.cha  125.cha  126.cha  127.cha  128.cha  132.cha  133.cha  134.cha  135.cha  138.cha  139.cha  140.cha  141.cha  143.cha  145.cha  149.cha  157.cha  159.cha  (+5 more)
backend/scripts/: build_mediapipe_stats.py  convert_keras_h5_to_npz.py  smoke_eye_tracking_v2.py
backend/services/: gateway.py  start_simple.py
backend/tests/: conftest.py  test_calibration_endpoint.py  test_calibration_profile.py  test_domain_adapt_preprocessing.py  test_domain_adapt_self.py  test_feature_range_guard.py  test_inference_runner.py  test_iris_depth_photogrammetry.py  test_logging.py  test_rate_limit.py  test_readyz.py  test_security.py  test_temporal_smoothing.py  test_token_expiry.py  test_upload_validation.py
(+167 files in other folders)
